project(libwdiv)
cmake_minimum_required(VERSION 3.16)

# ============================================
# C++ Standard
# ============================================
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# ============================================
# Output Directory
# ============================================
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

# ============================================
# Sources
# ============================================
file(GLOB SOURCES "src/*.cpp")

# ============================================
# Targets
# ============================================
add_library(libwdiv STATIC ${SOURCES})
 

target_include_directories(libwdiv PUBLIC include  src)

# ============================================
# Compiler Flags - DEBUG
# ============================================
if(CMAKE_BUILD_TYPE MATCHES Debug)
    message(STATUS "🐛 Debug mode - sanitizers enabled")
    
    # target_compile_options(libwdiv PRIVATE
    #     # Sanitizers
    #     -fsanitize=address
    #     -fsanitize=undefined
    #     -fsanitize=leak
        
    #     # Debug info
    #     -g
    #     -O0
        
    #     # Warnings
    #     -Wall
    #     -Wextra
    #     -Wpedantic
        
    #     # Debug defines
    #     -DDEBUG
    #     -D_DEBUG
    # )
    
    # target_link_options(libwdiv PRIVATE
    #     -fsanitize=address
    #     -fsanitize=undefined
    #     -fsanitize=leak
    # )
 
    target_compile_options(libwdiv PRIVATE
        -O2
        -g
        -fno-omit-frame-pointer
    )
 

# ============================================
# Compiler Flags - RELEASE
# ============================================
elseif(CMAKE_BUILD_TYPE MATCHES Release)
    message(STATUS "🚀 Release mode - full optimizations")
    
    target_compile_options(libwdiv PRIVATE
        # Optimization level
        -O3
        
    
        
        # Architecture specific
        -march=native
        -mtune=native
        
      
        
        # Vectorization
        -ftree-vectorize
        
        # Strip debug info
        -DNDEBUG
        
        # Inline agressivo
        -finline-functions
        -funroll-loops
    )
    
    target_link_options(libwdiv PRIVATE

        -s  # Strip symbols
    )
    
# ============================================
# Compiler Flags - RELWITHDEBINFO
# ============================================
elseif(CMAKE_BUILD_TYPE MATCHES RelWithDebInfo)
    message(STATUS "🔧 RelWithDebInfo mode - optimized + debug symbols")
    
    target_compile_options(libwdiv PRIVATE
        -O2
        -g
        -march=native
    )
    
# ============================================
# Default to Release
# ============================================
else()
    message(STATUS "⚠️  No build type specified, defaulting to Release")
    set(CMAKE_BUILD_TYPE Release)
    
    target_compile_options(libwdiv PRIVATE
        -O3
        -march=native
    )
endif()
 
# ============================================
# Platform Specific
# ============================================
if(UNIX AND NOT APPLE)
    target_link_libraries(libwdiv PRIVATE pthread)
endif()

# ============================================
# Info
# ============================================
message(STATUS "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━")
message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
message(STATUS "Compiler: ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}")
message(STATUS "Output: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
message(STATUS "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━")
